--- a/chikenkari.html
+++ b/chikenkari.html
@@ -41,8 +41,8 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container-fluid">
             <img src="./images/Shop way.png" alt="Logo" width="50px">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+          <button class="navbar-toggler" type="button" id="ham" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon" id="line"></span>
           </button>
           <div class="collapse navbar-collapse text-center" id="navbarNav">
             <ul class="navbar-nav">
