--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top">
     <div class="container-fluid">
         <img src="./images/Shop way.png" alt="Logo" width="50px">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+      <button class="navbar-toggler" type="button" id="ham" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon" id="line"></span>
       </button>
       <div class="collapse navbar-collapse text-center" id="navbarNav">
         <ul class="navbar-nav">
@@ -58,13 +58,13 @@
   </nav>
   <!-- bannar  -->
     <section class="banner bg-primary">
-      <div class="container text-end">
+      <div class="container text-end" id="ban">
           <h1>Welcome Shop Way</h1>
           <p>Your favorite place for Shopping </p>
       </div>
   </section>
   <!-- section 2  imagires -->
-    <section >
+    <section id="sec">
         <div class="container-fluid">
             <div class="row d-flex d-row justify-content-center">
                 <div class="col-md-4">
