--- a/one.html
+++ b/one.html
@@ -3,63 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop way</title>
-    <link rel="icon" href="./images/Shop way.png">
+    <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/c56a316195.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./index.css">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
-        body{
-            background-color: rgb(200, 200, 200);
-        }
-        .sec1{
-            margin-top: 10%;
-        }
-        h1{
-            color: red;
-            font-size: 80px;
-            font-family: "Dancing Script", cursive;
-        }
-        .fa-solid{
-            color: blue;
-            font-size: 150px;
-        }
-        @media All and  (min-width:300px) and (max-width:992px){
-        .h1{
-          margin-top: 18%;
-          font-size: 50px;
-        }
-      }
-      @media All and  (min-width:300px) and (max-width:992px){
-        #ham{
-        width: 50px;
-        height: 40px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 20px;
-        border: 0.5px solid black;
-      }
-      #line{
-        font-size: 20px;
-        /* color: red; */
-      }
-      }
+         
     </style>
 </head>
 <body>
-    <section class="sec1">
-      <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container-fluid">
             <img src="./images/Shop way.png" alt="Logo" width="50px">
-          <button class="navbar-toggler" type="button" id="ham" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon" id="line"></span>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" id="ham">
+            <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse text-center" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./cart.html">Cart</a>
@@ -92,15 +52,7 @@
           </div>
         </div>
       </nav>
-    </section>
-    <h1 class="text-center m-5">More products are avilable soon <br> Continue your shopping <br><br><i class="fa-solid fa-cart-plus"></i></h1>
 
-
-    <!-- <footer>
-      <div class="end">
-          <p>&copy; 2024 My Website. All rights reserved.</p>
-      </div>
-  </footer> -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
