--- a/short-Kurtis.html
+++ b/short-Kurtis.html
@@ -31,6 +31,21 @@
           margin-top: 18%;
         }
       }
+      @media All and  (min-width:300px) and (max-width:992px){
+        #ham{
+        width: 50px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 20px;
+        border: 0.5px solid black;
+      }
+      #line{
+        font-size: 20px;
+        /* color: red; */
+      }
+      }
     </style>
 </head>
 <body>
@@ -38,8 +53,8 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container-fluid">
             <img src="./images/Shop way.png" alt="Logo" width="50px">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+          <button class="navbar-toggler" type="button" id="ham" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon" id="line"></span>
           </button>
           <div class="collapse navbar-collapse text-center" id="navbarNav">
             <ul class="navbar-nav">
