--- a/log.html
+++ b/log.html
@@ -8,6 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./log.css">
     <link rel="stylesheet" href="./index.css">
+    <!-- <script>
+      function clickAction(){
+        alert('Your login secessfull')
+      }
+    </script> -->
 </head>
 <body>
     <!-- navebar section  -->
@@ -72,7 +77,7 @@
                         <!-- <input type="password" required placeholder="Re-enter your password" class="form-control put" id="password"> -->
                         <label for="box" class="box"><input type="checkbox" required id="box">
                             I accepct Terms and condetions</label>
-                        <button>Login</button>
+                        <button onclick="clickAction()">Login</button>
                         <p class="account">Dont have an account ? <a href="./signup.html">Signup</a></p>
                     </form>
                 </div>
