--- a/signup.html
+++ b/signup.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./signup.css">
     <link rel="stylesheet" href="./index.css">
+
 </head>
 <body>
     <!-- navebar section  -->
@@ -58,18 +59,18 @@
         <form class="login-form">
             <h1>Shop Way</h1>
             <label for="name" class="names">Name </label>
-            <input type="text" required placeholder="Enter your name" class="form-control put" id="name">
+            <input type="text" required placeholder="Enter your name" class="form-control put" id="name" name="name">
             <label for="email" class="names">Email </label>
-            <input type="email" required placeholder="Enter your email" class="form-control put" id="email">
+            <input type="email" required placeholder="Enter your email" class="form-control put" id="email" name="email">
             <label for="date" class="names">Date of birth</label>
             <input type="date" required class="form-control put" id="date">
             <label for="password" class="names">Password </label>
-            <input type="password" required placeholder="Enter your password" class="form-control put" id="password">
+            <input type="password" required placeholder="Enter your password" class="form-control put" id="password" name="password">
             <label for="password" class="names">Conform Password </label>
-            <input type="password" required placeholder="Re-enter your password" class="form-control put" id="password">
+            <input type="password" required placeholder="Re-enter your password" class="form-control put" id="password" name="c_password">
             <label for="box" class="box"><input type="checkbox" required id="box">
                 I accepct Terms and condetions</label>
-            <button>Submit</button>
+            <button onclick="clickAction()">Submit</button>
             <p class="account">Alrady have an account ? <a href="./log.html">Login</a></p>
         </form>
     </section>
